# Piscine-Python

./: README.md
Python-day-00/: README.md
Python-day-00/ex00/: Hello.py
Python-day-00/ex01/: format_ft_time.py
Python-day-00/ex02/: find_ft_type.py  tester.py
Python-day-00/ex03/: NULL_not_found.py  tester.py
Python-day-00/ex04/: whatis.py
Python-day-00/ex05/: building.py
Python-day-00/ex06/: filterstring.py  ft_filter.py  test.py
Python-day-00/ex07/: sos.py
Python-day-00/ex08/: Loading.py  test.py
Python-day-00/ex09/: LICENSE  README.md  pyproject.toml  setup.py
Python-day-00/ex09/ft_package/: __init__.py  count_in_list.py
Python-day-00/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Python-day-01/: README.md
Python-day-01/ex00/: give_bmi.py  pp.py  tester.py
Python-day-01/ex01/: array2D.py  tester.py
Python-day-01/ex02/: load_image.py  tester.py
Python-day-01/ex03/: load_image.py  main.py  zoom.py
Python-day-01/ex04/: load_image.py  rotate.py
Python-day-01/ex05/: pimp_image.py  tester.py
Python-day-02/: README.md
Python-day-02/ex00/: load_csv.py  tester.py
Python-day-02/ex01/: aff_life.py  load_csv.py
Python-day-02/ex02/: aff_pop.py
Python-day-02/ex03/: projection_life.py
Python-day-03/: test.py
Python-day-03/ex00/: S1E9.py  tester.py
Python-day-03/ex01/: S1E9.py  tester.py
Python-day-03/ex02/: DiamondTrap.py  S1E7.py  tester.py
Python-day-03/ex03/: ft_calculator.py  tester.py
Python-day-03/ex04/: ft_calculator.py  tester.py
Python-day-04/ex00/: statistics.py  tester.py
Python-day-04/ex01/: in_out.py  (+1 more)
(+4 files in other folders)
