[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A simple example package"
authors = [
    {nam="ziloughm", email="ziloughm@42.fr"}
    ]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = []

[tool.setuptools]
packages = ["ft_package"]